--- a/Lane_Detection/CMakeLists.txt
+++ b/Lane_Detection/CMakeLists.txt
@@ -1,12 +1,11 @@
 cmake_minimum_required(VERSION 3.0)
-project(zebbi)
+project(laneDet)
 
 
 find_package(OpenCV 3 REQUIRED)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(zebbi main.cpp imgUtils.cpp imgUtils.h)
-target_link_libraries( zebbi ${OpenCV_LIBS} )
+add_executable(laneDet main.cpp imgUtils.cpp imgUtils.h lane.cpp lane.hpp)
+target_link_libraries(laneDet ${OpenCV_LIBS})
 include_directories(${OpenCV_INCLUDE_DIRS})
-
